objects/Assignment_Lib__c.object
<CustomObject>
    <description>This is where the Assignments are archived and link to Standards through a junction objected called Assignment/Standard.</description>
    <fields>
        <fullName>Assignment_Description__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Assignment Libraries</relationshipLabel>
        <relationshipName>Assignment_Libraries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Curriculum__c</fullName>
        <label>Curriculum</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Values Needed</fullName>
                </value>
                <value>
                    <fullName>Please Setup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructional_Approach__c</fullName>
        <label>Instructional Approach</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Values Needed</fullName>
                </value>
                <value>
                    <fullName>Please Setup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Objective_Skill__c</fullName>
        <label>Objective/Skill</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment Type</label>
        <referenceTo>Picklist_Value__c</referenceTo>
        <relationshipLabel>Assignment Libraries</relationshipLabel>
        <relationshipName>Assignment_Libraries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Outside_Source__c</fullName>
        <label>Related Outside Source</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>Picklist_Value__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Assignment Library</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Picklist_Value__c</columns>
        <columns>Course__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <nameField>
        <label>Assignment Library Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Libraries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Assignment_Library_Name_not_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(  Name  ),
NOT($Profile.Id = &quot;00e1a000000otaR&quot;)
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Assignment library name cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>