objects/Assignment_Lib__c/validationRules/Assignment_Library_Name_not_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Assignment_Library_Name_not_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(  Name  ),
NOT($Profile.Id = &quot;00e1a000000otaR&quot;)
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Assignment library name cannot be changed.</errorMessage>
</ValidationRule>